# spritespite

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
app/: __init__.py  exporters.py  main.py  processing.py  temp_utils.py  ui.py  video_io.py
documents/: creating-a-prompt.md
