[project]
name = "spritespite"
version = "0.1.0"
description = "A video/GIF to sprite sheet converter for Godot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.6.1",
    "opencv-python>=4.9.0.80",
    "numpy>=1.26.4",
    "Pillow>=10.2.0",
    "pyoxipng>=0.1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project.scripts]
spritespite = "app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"